Deployment from Statiq

--- a/release-notes/v250.html
+++ b/release-notes/v250.html
@@ -381,6 +381,10 @@
 <ul>
 <li>[Enhancement] Improved boilerplate 3rd party library generation - now includes FFImageLoading</li>
 </ul>
+<h2 id="bluetoothle">BluetoothLE</h2>
+<ul>
+<li>[Fix][Android] Peripheral.ReadRssi not working <a href="https://github.com/shinyorg/shiny/issues/913">GH-913</a></li>
+</ul>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
