Deployment from Statiq

--- a/release-notes/v250.html
+++ b/release-notes/v250.html
@@ -379,7 +379,13 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <h2 id="core">Core</h2>
 <ul>
+<li>[BREAKING][Android] Major target is now Android 12</li>
+<li>[Enhancement][Android] Bump all AndroidX libraries to next required version of Android 12 functionality</li>
 <li>[Enhancement] Improved boilerplate 3rd party library generation - now includes FFImageLoading</li>
+</ul>
+<h2 id="push-firebase">Push (Firebase)</h2>
+<ul>
+<li>[Enhancement][iOS] Push to next major version of iOS firebase libraries</li>
 </ul>
 <h2 id="bluetoothle">BluetoothLE</h2>
 <ul>
